projects/compiler/test/typechecker/if/error_block_mismatch.2.out
Error at %FILE_NAME%:1:35
Type mismatch
  |  val a = if true { ["123"] } else [456]
                                       ^
Expected: String
but instead found: Int
